# referral_system_django

./: .gitignore  README.md  docker-compose.dev.yml  pyproject.toml
core/: asgi.py  settings.py  urls.py
deploy/: Dockerfile  docker-compose.yml
referral_system/: query_debug.py  settings.py  urls.py  wsgi.py
user/: fields.py  models.py  schema.py  serializers.py  services.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_user_invite_code.py  0003_user_referrer.py  0004_alter_user_mobile.py
